add original stuffs

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <!-- Custom styles for this template -->
   <link href="css/freelancer.min.css" rel="stylesheet">
-
+  <link rel="stylesheet" href="css/production.min.css">
 </head>
 
 <body id="page-top" class="index">
