remove duplicate css

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     rel="icon" type="image/x-icon">
 
   <!-- Custom styles for this template -->
-  <link href="css/freelancer.min.css" rel="stylesheet">
+  <!-- <link href="css/freelancer.min.css" rel="stylesheet"> -->
   <link rel="stylesheet" href="css/production.min.css">
 </head>
 
